log validation